--- a/src/app/pages/adopters/adopters.html
+++ b/src/app/pages/adopters/adopters.html
@@ -1,6 +1,6 @@
-<template args="adopters">
+<template args="model">
     <h1>Complete list of institutions that have adopted OpenStax</h1>
     <ul class="adopters">
-        <li each="adopter in adopters" class="adopter">{adopter.name}</li>
+        <li each="adopter in model.adopters" class="adopter">{adopter.name}</li>
     </ul>
 </template>
