--- a/src/app/pages/higher-ed/higher-ed.html
+++ b/src/app/pages/higher-ed/higher-ed.html
@@ -24,14 +24,14 @@
                     <li class="numbered step">
                         <div class="title">{model.get_started_step_1_heading}</div>
                         <div class="blurb">{model.get_started_step_1_description}</div>
-                        <div class="more"><a href="/subjects">{model.get_started_step_1_cta}</a></div>
+                        <div class="more"><a href="/subjects" class="with-arrow">{model.get_started_step_1_cta}</a></div>
                     </li>
 
                     <li class="numbered step">
                         <div class="title">{model.get_started_step_2_heading}</div>
                         <div class="blurb">{model.get_started_step_2_description}</div>
                         <div class="more">
-                            <a href="{model.loginLink}" data-local="true">
+                            <a href="{model.loginLink}" class="with-arrow" data-local="true">
                                 {model.get_started_step_2_cta}
                             </a>
                         </div>
@@ -40,7 +40,7 @@
                     <li class="numbered step">
                         <div class="title">{model.get_started_step_3_heading}</div>
                         <div class="blurb">{model.get_started_step_3_description}</div>
-                        <div class="more"><a href="/adoption">{model.get_started_step_3_cta}</a></div>
+                        <div class="more"><a href="/adoption" class="with-arrow">{model.get_started_step_3_cta}</a></div>
                     </li>
                 </ol>
 
@@ -48,7 +48,7 @@
                     <div class="title">{model.adopt_heading}</div>
                     <div class="blurb">{model.adopt_description}</div>
                     <div class="more">
-                        <a href="/contact?subject=College/University Partnerships">
+                        <a href="/contact?subject=College/University Partnerships" class="with-arrow">
                             {model.adopt_cta}
                         </a>
                     </div>
