--- a/src/app/pages/impact/impact.html
+++ b/src/app/pages/impact/impact.html
@@ -39,7 +39,7 @@
             </ul>
 
             <div class="adopters">
-                <a href="/adopters">
+                <a href="/adopters" class="with-arrow">
                     See a full list of institutions that have adopted OpenStax
                 </a>
             </div>
