--- a/src/app/pages/support/support.html
+++ b/src/app/pages/support/support.html
@@ -19,7 +19,7 @@
                         <div class="name">{resource.name}</div>
                         <div class="description">{resource.description}</div>
                     </div>
-                    <div class="link"><a href="{resource.linkUrl}">{resource.linkText}</a></div>
+                    <div class="link"><a href="{resource.linkUrl}" class="with-arrow">{resource.linkText}</a></div>
                 </div>
             </div>
         </div>
