--- a/src/app/components/products-boxes/product-box/product-box.html
+++ b/src/app/components/products-boxes/product-box/product-box.html
@@ -3,6 +3,6 @@
     <div class="caption">
         <h3 class="title">{model.title}</h3>
         <p class="blurb">{model.blurb}</p>
-        <a class="btn" href="{model.url}">{model.linkText}</a>
+        <a class="btn with-arrow" href="{model.url}">{model.linkText}</a>
     </div>
 </template>
