--- a/src/app/pages/adopters/adopters.scss
+++ b/src/app/pages/adopters/adopters.scss
@@ -8,19 +8,27 @@
 }
 
 .adopters-page {
-    text-align: center;
 
     h1 {
         margin-bottom: 2rem;
+        text-align: center;
+
+        @include phone {
+            padding-left: 1.5rem;
+            text-align: left;
+        }
     }
 
     .adopters {
         column-count: 3;
         column-gap: 5rem;
+        font-size: 1.5rem;
+        font-weight: 400;
         list-style-type: none;
 
         @include phone {
             column-count: 1;
+            padding-left: 1.5rem;
         }
 
         @include tablet {
@@ -33,11 +41,9 @@
     }
 
     .adopter {
-        line-height: 2;
-        text-align: left;
-
-        @include phone {
-            text-align: center;
-        }
+        line-height: 1.3;
+        margin-bottom: 1rem;
+        padding-left: 0.5rem;
+        text-indent: -0.5rem;
     }
 }
