--- a/src/app/pages/details/partner/partner.html
+++ b/src/app/pages/details/partner/partner.html
@@ -9,6 +9,6 @@
         <blurb-html></blurb-html>
     </div>
     <div class="text">
-        <a href="{model.url}">{model.linkText}</a>
+        <a href="{model.url}" class="with-arrow">{model.linkText}</a>
     </div>
 </template>
