--- a/src/styles/mixins/triangle.scss
+++ b/src/styles/mixins/triangle.scss
@@ -69,7 +69,7 @@
     @return $opposite-directions;
 }
 
-@mixin triangle($direction, $position, $color: white, $size: 1rem) {
+@mixin triangle($direction, $position, $color: default, $size: 1rem) {
     @if not index(top right bottom left, $direction) {
         @warn 'Direction must be one of top, right, bottom or left.';
     } @else {
@@ -79,7 +79,13 @@
         content: '';
         z-index: 2;
 
-        border-#{$opposite-direction}: $size solid $color;
+        @if $color == default {
+            border-#{$opposite-direction}: $size solid;
+
+        } else {
+            border-#{$opposite-direction}: $size solid $color;
+        }
+
         $perpendicular-borders: $size solid transparent;
 
         @if $direction == top or $direction == bottom {
