--- a/src/app/components/shell/sticky-note/sticky-note.html
+++ b/src/app/components/shell/sticky-note/sticky-note.html
@@ -1,13 +1,15 @@
-<div class="text-content container">
-    Help us make more free high-quality textbooks!
-    <div class="single-button">
-        <a class="btn inverted" href="/give?student">Give Now</a>
+<template args="model">
+    <div if="model.content" class="text-content container">
+        {model.content}
+        <div class="single-button">
+            <a class="btn inverted" href="/give?student">Give Now</a>
+        </div>
+        <div class="multi-button">
+            <a class="btn inverted" href="/give/form?amount=5">Give $5</a>
+            <a class="btn inverted" href="/give/form?amount=10">Give $10</a>
+            <a class="btn inverted" href="/give/form?amount=25">Give $25</a>
+            <a class="btn inverted" href="/give/form?amount=50">Give $50</a>
+            <a class="btn inverted" href="/give?student&amount">Give Other Amount</a>
+        </div>
     </div>
-    <div class="multi-button">
-        <a class="btn inverted" href="/give/form?amount=5">Give $5</a>
-        <a class="btn inverted" href="/give/form?amount=10">Give $10</a>
-        <a class="btn inverted" href="/give/form?amount=25">Give $25</a>
-        <a class="btn inverted" href="/give/form?amount=50">Give $50</a>
-        <a class="btn inverted" href="/give?student&amount">Give Other Amount</a>
-    </div>
-</div>
+</template>
