--- a/src/app/pages/tos/tos.html
+++ b/src/app/pages/tos/tos.html
@@ -1,93 +1,10 @@
-<img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
-<main id="maincontent" class="boxed">
-    <h1>Terms of Use</h1>
-
-    <p>
-        This user agreement (this “Agreement”) from OpenStax describes the terms and conditions
-        on which you may use the OpenStax educational service and content (collectively, the “Service”).
-        If you do not accept and agree to be bound by the terms and conditions of this Agreement,
-        you may not access or use the Service.
-    </p>
-
-    <p>
-        Your access or use of the Service constitutes your acceptance of and agreement to be bound by
-        the terms and conditions of this Agreement, including, but not limited to, any policies and
-        procedures incorporated by reference. In addition, your use of any particular part of the Service
-        shall be subject to such additional terms and conditions as may be posted from time to time.
-    </p>
-
-    <p>
-        OpenStax may amend this Agreement at any time by posting the amended terms on the website,
-        and such amended terms shall become effective 30 days after being initially posted to the website.
-        This Agreement may not otherwise be amended except in writing signed by you and an authorized
-        representative of OpenStax.
-    </p>
-
-    <p>
-        Each individual work in the Service is offered for license to you by the author of that work on
-        the terms and conditions set forth in the Creative Commons license associated with that individual
-        work. You are required under U.S. copyright law, the equivalent laws of other countries, and
-        international treaties to respect the copyrights of those authors and to use their works subject
-        to the terms and conditions of their respective licenses and applicable law. You may only copy,
-        modify, distribute and otherwise use the works in the Service in accordance with a license to do
-        so or as may otherwise be permitted under applicable law.
-    </p>
-
-    <p>
-      All other content/information/imagery in the Service (including logos, taglines, book covers, text copy,
-      web site design, etc; excluding textbook content and content licensed from other entities) is Copyright
-      Rice University All Rights Reserved.
-    </p>
-
-    <p>
-        Neither OpenStax nor Rice University undertakes any obligation to review or monitor
-        any content submitted to the Service and shall not have any responsibility or liability in
-        connection therewith. OpenStax and Rice University may remove content if it is deemed
-        appropriate to do so by OpenStax or Rice University, in their sole discretion, including,
-        but not limited to, to comply with law or legal process, to respond to third party complaints,
-        to enforce the terms and conditions of use, or to protect OpenStax or Rice University.
-    </p>
-
-    <p>
-        THE SERVICE ARE PROVIDED ON AN “AS IS” BASIS, WITHOUT ANY REPRESENTATIONS OR WARRANTIES OF ANY KIND,
-        EXPRESS, IMPLIED OR STATUTORY, INCLUDING, BUT NOT LIMITED TO, REPRESENTATIONS AND WARRANTIES OF ACCURACY,
-        COMPLETENESS, NON-INFRINGEMENT, MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
-        YOUR USE OF THE SERVICE ARE ENTIRELY AT YOUR OWN RISK.
-    </p>
-
-    <p>
-        UNDER NO CIRCUMSTANCES AND UNDER NO LEGAL THEORY, WHETHER IN TORT (INCLUDING NEGLIGENCE),
-        CONTRACT, OR OTHERWISE, SHALL OPENSTAX OR RICE UNIVERSITY, OR ITS TRUSTEES, OFFICERS,
-        EMPLOYEES AND REPRESENTATIVES, BE LIABLE TO YOU OR TO ANY THIRD PARTY FOR ANY DIRECT, INDIRECT,
-        INCIDENTAL, CONSEQUENTIAL, SPECIAL, EXEMPLARY OR PUNITIVE DAMAGES OF ANY KIND DIRECTLY OR INDIRECTLY
-        ARISING OUT OF OR IN CONNECTION WITH THE OPERATION, MAINTENANCE, ACCESS OR USE OF THE SERVICE.
-        This paragraph shall survive any expiration or termination of this Agreement.
-    </p>
-
-    <p>
-        OpenStax and Rice University reserve the right at any time and from time to time,
-        in their sole discretion, to modify or discontinue, temporarily or permanently, the Service
-        with or without notice. OpenStax and Rice University, and its trustees, officers,
-        employees and representatives, shall not have any responsibility or liability to you or to any
-        third party in the event of any such modification, suspension or discontinuance of the Service.
-    </p>
-
-    <p>
-        This Agreement shall be interpreted and enforced under the laws of the United States and
-        the State of Texas, without giving effect to its conflicts or choice of law principles.
-        You are responsible and liable for complying with all applicable laws in connection with your
-        access or use of the Service. In the event a dispute arises related to this Agreement or your
-        access or use of the Service, you agree to submit to the jurisdiction of the courts
-        located in Harris County, Texas.
-    </p>
-
-    <p>
-        IF YOU BECOME A REGISTERED USER OF OPENSTAX, YOU AGREE TO INDEMNIFY, DEFEND AND HOLD
-        HARMLESS OPENSTAX AND RICE UNIVERSITY, AND ITS TRUSTEES, OFFICERS, EMPLOYEES AND REPRESENTATIVES,
-        FROM ANY AND ALL DEMANDS, CLAIMS, ACTIONS, DAMAGES, LOSSES, LIABILITIES, COSTS AND EXPENSES,
-        INCLUDING ATTORNEYS' FEES AND COURT COSTS, DIRECTLY OR INDIRECTLY ARISING OUT OF OR IN CONNECTION
-        WITH YOUR ACCESS OR USE OF THE SERVICE, YOUR SUBMISSION OF ANY CONTENT TO THE SERVICE, OR YOUR
-        VIOLATION OF ANY OF THE TERMS OR CONDITIONS OF THIS AGREEMENT. This paragraph shall survive
-        any expiration or termination of this Agreement.
-    </p>
-</main>
+<template args="model">
+    <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
+    <main id="maincontent" class="boxed">
+        <h1>{model.intro_heading}</h1>
+    
+        <div class="plain">
+            <p class="text" data-html="terms_of_service_content" skip="true"></p>
+        </div>
+    </main>
+</template>
