--- a/src/app/components/shell/header/header.scss
+++ b/src/app/components/shell/header/header.scss
@@ -2,7 +2,6 @@
 @import 'mixins';
 
 $button-size: 2.8rem;
-$transition: 0.3s;
 
 .page-header {
     align-items: center;
@@ -17,620 +16,180 @@ $transition: 0.3s;
     width: 100%;
     z-index: 1;
 
-    @at-root .active#{&} {
-        bottom: 0;
-        height: 100%;
-        right: 0;
-        transition: height 0.5s;
-        width: 100%;
-    }
-
     @include desktop {
         left: 0;
         position: absolute;
         right: 0;
         top: 0;
+
+        a:active,
+        a:focus {
+            outline: none;
+        }
+    }
+
+    > .meta-nav {
+        order: 1;
+    }
+
+    > .nav {
+        order: 2;
+
+        @include desktop {
+            height: 6rem;
+        }
+    }
+
+    @at-root .active#{&} {
+        height: 100%;
+        padding-bottom: 6rem;
+        padding-left: 4rem;
+
+        > .meta-nav {
+            display: flex;
+            justify-content: center;
+            order: 2;
+            width: 100%;
+        }
+
+        > .nav {
+            order: 1;
+            width: 100%;
+        }
+
+        .container {
+            width: 19rem;
+        }
+    }
+
+    @at-root .fixed#{&} {
+        > .nav {
+            background-color: color(neutral-lightest);
+            position: fixed;
+            top: -5rem;
+            transform: translateY(5rem);
+            transition: all 0.15s;
+        }
     }
 
     &.transparent {
         @include desktop {
             background: transparent;
-        }
-    }
 
-    > .skiptocontent {
-        a {
-            background-color: color(primary);
-            border-bottom-right-radius: 1rem;
-            clip: rect(0.1rem, 0.1rem, 0.1rem, 0.1rem);
-            color: color(neutral-lightest);
-            height: 0.1rem;
-            left: 0;
-            outline: 0;
-            position: absolute;
-            top: 0;
-            width: 0.1rem;
-            z-index: 1;
-
-            &:focus {
-                clip: auto;
-                font-size: 2rem;
-                height: auto;
-                padding: 0.5rem 1rem;
-                transition: top 0.1s ease-in, background 0.5s linear;
-                width: auto;
+            .nav {
+                background-color: rgba(color(neutral-darkest), 0.2);
             }
         }
     }
 
-    .container {
-        display: flex;
-        flex: 1 100%;
-        flex-flow: row wrap;
-        height: 100%;
-        margin: 0 auto;
-        max-width: $boxed-width;
-        padding: 0 1.5rem;
-        width: 100%;
-    }
-
     .nav-menu {
-        display: flex;
-        flex: 0 auto;
-        flex-flow: column nowrap;
-        margin: 0;
-        opacity: 0;
-        padding: 0;
-        transform: scale3d(0, 0, 0);
-
         @at-root .active#{&} {
-            opacity: 1;
             transform: scale3d(1, 1, 1) translate3d(0, 0, 0);
             transition: opacity 0.3s 0.4s, transform 0.3s ease-in-out;
-
         }
 
         @at-root .active.open#{&} {
             transform: translate3d(-100rem, 0, 0);
             transition: transform 0.3s ease-in-out;
 
-        }
-
-        @include desktop {
-            flex-flow: row wrap;
-            justify-content: flex-end;
-            opacity: 1;
-            transform: scale3d(1, 1, 1);
-        }
-
-        .nav-menu-item {
-            @include desktop {
-                margin: 0;
-                padding: 0 2rem;
-                position: relative;
-            }
-
-            > a {
-                @include desktop {
-                    padding-bottom: 2rem;
-                }
-
-                &:focus,
-                &:active,
-                &:hover {
-                    outline: none;
-                }
-            }
-
-            &.dropdown {
-                display: inline-block;
-
-                @include desktop {
-                    padding: 0 4rem 0 2rem;
-
-                    &:last-child {
-                        padding-right: 3rem;
-                    }
-                }
-            }
-        }
-
-        .dropdown > a {
-            position: relative;
-        }
-
-        .dropdown .chevron {
-            bottom: 0.3rem;
-            fill: color(blue);
-            position: absolute;
-            right: -2rem;
-            width: 0.8rem;
-
-            @include desktop {
-                bottom: 1.1rem;
-                fill: color(neutral-medium);
-                padding-bottom: 25%;
-                right: -1.5rem;
-                transform: rotate3d(0, 0, 1, 90deg);
-
-                @at-root .transparent#{&} {
-                    fill: color(neutral-lightest);
-                }
-            }
-        }
-
-        .clone a {
-            color: color(neutral-medium);
-            cursor: default;
-            font-weight: 600;
-
-            &:last-child:hover {
-                color: color(neutral-medium);
-            }
-        }
-
-        .clone .back {
-            color: color(cyan);
-            cursor: pointer;
-            display: block;
-            margin: 0 0 1rem;
-            padding-left: 2rem;
-            position: relative;
-
-            &:focus {
-                outline: none;
-            }
-        } // end .back
-
-        .clone .chevron {
-            fill: color(cyan);
-            left: 0;
-            position: absolute;
-            top: 0.7rem;
-            transform: rotate3d(0, 0, 1, 180deg);
-            width: 0.8rem;
-        }
-
-        .dropdown-menu {
-            font-size: 1.6rem;
-            font-weight: 300;
-            left: 0;
-            margin: 0;
-            overflow: hidden;
-            padding: 0;
-            position: absolute;
-            top: 0%;
-            transform: translate3d(200rem, 0, 0);
-            transition: transform 0.3s ease-in-out;
-
-            @include desktop {
-                background: color(neutral-lightest);
-                border-top: 0.5rem solid color(orange);
-                height: 0;
-                left: 50%;
-                opacity: 0;
-                padding: 0.5rem 0;
-                top: 3.7rem;
-                transform: translate3d(-50%, -1rem, 0);
-                transition: transform 0.2s 0.01s, opacity 0.2s;
-                white-space: nowrap;
-                width: 0;
-
-                @at-root .fixed#{&} {
-                    background: color(neutral-lightest);
-                }
-            }
-
-            &.open {
-                @include desktop {
-                    height: auto;
-                    opacity: 1;
-                    transform: translate3d(-50%, 0, 0);
-                    width: auto;
-                    z-index: 1;
-                }
-
-                @at-root .active.open#{&} {
-                    transform: translate3d(100rem, 0, 0);
-
-                }
-            }
-
-            li {
-                margin: 0 0 0.5rem;
-
-                @include desktop {
-                    margin: 0;
-                    padding: 0 1rem;
-                }
-            }
-
             a {
                 color: color(gray);
-                display: block;
-                outline: none;
-
-                &:hover {
-                    color: color(cyan);
-                }
             }
-        }
 
-        .dropdown:hover .dropdown-menu {
-            @include desktop {
-                height: auto;
-                opacity: 1;
-                transform: translate3d(-50%, 0, 0);
-                width: auto;
-                z-index: 1;
+            .chevron {
+                display: none;
+            }
+
+            .dropdown > a {
+                font-weight: bold;
             }
         }
     }
 
-    .meta-nav {
-        font-size: 1.6rem;
-        height: 0;
-        order: 2;
-        overflow: hidden;
-        width: 0;
-
-        @at-root .active#{&} {
-            height: auto;
-            overflow: visible;
-            width: 100%;
-        }
-
-        @include desktop {
-            background-color: lighten(color(neutral-lighter), 8%);
-            font-size: 1.4rem;
-            height: 5rem;
-            order: 1;
-            overflow: inherit;
-            width: 100%;
-            z-index: 1;
-        }
-
-        .container {
-            align-items: center;
-            height: 100%;
-            justify-content: center;
-            width: 100%;
-
-            @include desktop {
-                justify-content: flex-end;
-            }
-        }
-
-        .nav-menu {
-            @at-root .active#{&} {
-                width: 14.8rem;
-            }
-        }
-
+    @at-root .active.open#{&} {
         .nav-menu-item {
-
-            > a {
-                color: color(cyan);
-
-                @include desktop {
-                    color: color(gray);
-                }
-
-                &:active,
-                &:hover {
-                    color: color(cyan);
-                }
+            &:not(.open) {
+                height: 0;
+                margin: 0;
             }
 
-            &.dropdown {
-                @include desktop {
-                    margin-right: 1rem;
-                }
+            &.dropdown > a {
+                display: none;
             }
+
+            &.dropdown.open > a {
+                display: block;
+                padding-left: 100rem;
+            }
+        }
+
+        .dropdown-menu {
+            &.open {
+                display: block;
+                padding-left: 100rem;
+            }
+        }
+    }
+
+    .submenu-zone {
+        display: none;
+        order: 0;
+        position: relative;
+        width: 19rem;
+
+        .close {
+            border: 0;
+            color: color(cyan);
+            font-size: 1.6rem;
+            font-weight: 600;
         }
 
         .chevron {
-            display: none;
+            fill: color(cyan);
+            height: 1.33rem;
+            margin-right: 1rem;
+            transform: rotate(180deg);
+            transform-origin: center;
+            width: 0.8rem;
         }
 
-        .dropdown {
-            .chevron {
-                display: inline-block;
-                fill: color(cyan);
-                width: 0.6rem;
-
-                @include desktop {
-                    bottom: auto;
-                    fill: color(neutral-medium);
-                    right: -1.5rem;
-                    top: 0;
-
-                    @at-root .transparent#{&} {
-                        fill: color(neutral-medium);
-                    }
-                }
-            }
-
-            .clone .chevron {
-                width: 0.8rem;
-            }
-
-            a:hover .chevron {
-                fill: color(cyan);
-           }
-        }
-
-
-
-        .dropdown-menu {
-
-            @at-root .active#{&} {
-                transform: translate3d(200rem, -75%, 0);
-            }
-
-            @include desktop {
-                background-color: darken(color(neutral-lightest), 12%);
-                border-top: 0;
-                font-size: 1.4rem;
-
-                &::before {
-                    @include triangle(
-                        $direction: top,
-                        $position: top -0.5rem right calc(50% - 1rem),
-                        $color: darken(color(neutral-lightest), 12%),
-                        $size: 1rem
-                    );
-                }
-            }
-
-            &.open {
-                overflow: visible;
-
-                @at-root .active.open#{&} {
-                    transform: translate3d(100rem, -75%, 0);
-
-                }
-            }
-        }
-
-        .logo-wrapper {
-            align-items: center;
-            background: rgba(color(neutral-lighter), 0.2);
-            border-top: 0.1rem solid rgba(color(neutral-lighter), 0.5);
-            bottom: 0;
-            display: flex;
-            flex: 1 100%;
-            flex-flow: row nowrap;
-            justify-content: space-between;
-            left: 0;
-            opacity: 0;
-            overflow: hidden;
-            position: absolute;
-            transform: translate3d(0, 100%, 0);
-            width: 0;
-
-            @at-root .active#{&} {
-                opacity: 1;
-                padding: 1.5rem;
-                transform: translate3d(0, 0, 0);
-                transition: opacity 0.2s 0.5s, transform 0.3s 0.6s;
-                width: 100%;
-            }
-
-            @include desktop {
-                background: transparent;
-                border: 0;
-                bottom: auto;
-                flex: 0 auto;
-                left: auto;
-                margin-left: 2rem;
-                opacity: 1;
-                position: static;
-                transform: translate3d(0, 0, 0);
-                width: auto;
-            }
-
-            &::after {
-                color: color(gray);
-                content: '\00a9  Rice University';
-                order: 2;
-
-                @include desktop {
-                    display: none;
-                }
-            }
+        @at-root .active.open#{&} {
+            display: block;
         }
     }
+
+    > .skiptocontent {
+        display: none;
+    }
+
+    // > .skiptocontent {
+    //     a {
+    //         background-color: color(primary);
+    //         border-bottom-right-radius: 1rem;
+    //         clip: rect(0.1rem, 0.1rem, 0.1rem, 0.1rem);
+    //         color: color(neutral-lightest);
+    //         height: 0.1rem;
+    //         left: 0;
+    //         outline: 0;
+    //         position: absolute;
+    //         top: 0;
+    //         width: 0.1rem;
+    //         z-index: 1;
+    //
+    //         &:focus {
+    //             clip: auto;
+    //             font-size: 2rem;
+    //             height: auto;
+    //             padding: 0.5rem 1rem;
+    //             transition: top 0.1s ease-in, background 0.5s linear;
+    //             width: auto;
+    //         }
+    //     }
+    // }
 
     &.active {
-        .nav .container {
-            position: static;
-        }
-
         sticky-note {
             display: none;
-        }
-    }
-
-
-    .nav {
-        box-shadow: 0 0.1rem 0.3rem 0.2rem rgba(color(gray), 0.1);
-        order: 1;
-        width: 100%;
-
-        @at-root .active#{&} {
-            box-shadow: none;
-            height: auto;
-        }
-
-        @include desktop {
-            height: 6rem;
-            order: 2;
-            transform: translate3d(0, 0, 0);
-            transition: transform;
-
-            @at-root .transparent#{&} {
-                background-color: rgba(color(neutral-darkest), 0.2);
-            }
-
-            @at-root .fixed#{&} {
-                background-color: rgba(color(neutral-lightest), 0.97);
-                left: 0;
-                position: fixed;
-                top: -6rem;
-                transform: translate3d(0, 0, 0);
-                width: 100%;
-            }
-
-            @at-root .visible#{&} {
-                transform: translate3d(0, 100%, 0);
-                transition: transform 0.2s 0.1s;
-
-            }
-        }
-
-        .container {
-            align-items: center;
-            justify-content: center;
-            padding: 0 1.5rem;
-            position: relative;
-
-            @include desktop {
-                height: 100%;
-                justify-content: space-between;
-            }
-        }
-
-        .main-menu {
-            font-size: 1.8rem;
-            font-weight: 600;
-            margin-top: -6.6rem;
-            order: 3;
-
-            @include desktop {
-                margin: 0;
-            }
-        }
-
-        .nav-menu-item {
-            margin: 0 0 1rem;
-
-            @include desktop {
-                margin: 0;
-                padding: 0 2rem;
-                position: relative;
-
-                &:not(.dropdown):hover::after {
-                    background-color: color(green);
-                    bottom: -1.7rem;
-                    content: '';
-                    height: 0.5rem;
-                    left: 1rem;
-                    outline: 0;
-                    position: absolute;
-                    right: 1rem;
-                }
-            }
-
-            > a {
-                @include desktop {
-                    color: color(gray);
-                    padding-bottom: 2rem;
-
-                    @at-root .transparent#{&} {
-                        color: color(neutral-lightest);
-                    }
-                }
-            }
-        }
-
-        .logo-wrapper {
-            align-items: center;
-            display: flex;
-            flex: 0 auto;
-            font-size: 1.4rem;
-            left: 1.5rem;
-            line-height: 0;
-            order: 1;
-            position: absolute;
-            top: 1.2rem;
-
-            @include desktop {
-                left: auto;
-                position: static;
-                top: auto;
-            }
-
-            span {
-                vertical-align: middle;
-            }
-
-            > a {
-                display: inline-block;
-            }
-        }
-
-        .logo {
-            display: inline-block;
-            margin-right: 2.5rem;
-
-            a {
-                display: inline-block;
-                width: 15rem;
-
-                &:active,
-                &:focus,
-                &:hover {
-                    &::after {
-                        background-color: transparent;
-                        box-shadow: none;
-                    }
-                }
-            }
-
-            img {
-                height: 100%;
-                width: 100%;
-            }
-
-            .logo-color {
-                display: inline-block;
-
-                @include desktop {
-                    @at-root .transparent#{&} {
-                        display: none;
-                    }
-                }
-            }
-
-            .logo-white {
-                display: none;
-
-                @include desktop {
-                    @at-root .transparent#{&} {
-                        display: inline-block;
-                    }
-                }
-            }
-        }
-
-        .logo-quote {
-            color: color(gray);
-            display: inline-block;
-            height: 0;
-            transform: scale3d(0, 0, 0);
-            width: 0;
-
-            @media (min-width: 1000px) {
-                height: auto;
-                transform: scale3d(1, 1, 1);
-                width: auto;
-            }
-
-            @at-root .transparent#{&} {
-                color: color(neutral-lightest);
-            }
-
         }
     }
 
