--- a/src/app/components/shell/footer/footer.html
+++ b/src/app/components/shell/footer/footer.html
@@ -16,6 +16,9 @@
                 <li>
                     <a href="https://github.com/openstax">Open Source Code</a>
                 </li>
+                <li>
+                    <a href="/contact">Contact Us</a>
+                </li>
                 <li if="model.pressKitData">
                     <a href="{model.pressKitData.file}">Press Kit</a>
                 </li>
