Show blog link if there is blog content
Newsletter linked to Pardot URL

--- a/src/app/pages/blog/blog.html
+++ b/src/app/pages/blog/blog.html
@@ -12,4 +12,8 @@
             <div class="container" skip="true"></div>
         </div>
     </div>
+    <div class="update-box">
+        <h2>Get updates in your inbox</h2>
+        <a class="btn cta" href="http://go.pardot.com/l/218812/2016-10-04/lvk">Sign Up</a>
+    </div>
 </template>
