Hotfix: Scroll to Student Resource
Add `skip=“true”` to resources regions
Remove unused regions

--- a/src/app/pages/details/details-loaded.html
+++ b/src/app/pages/details/details-loaded.html
@@ -105,7 +105,7 @@
                     OpenStax partners provide additional, low-cost resources for your
                     book. See what's offered for this title below and learn more about
                     our <a href="/partners">Partners here</a>.</p>
-                    <div id='partners' class="resource"></div>
+                    <div id='partners' class="resource" skip="true"></div>
                 </div>
             </if>
             <if condition="model.book_student_resources.length">
@@ -115,7 +115,7 @@
                         Take a look at our free student resources that are integrated
                         with your book to help you ace your course.
                     </p>
-                    <div id="student-resources" class="resource"></div>
+                    <div id="student-resources" class="resource" skip="true"></div>
                 </div>
             </if>
         </div>
