--- a/src/app/pages/subjects/book-viewer/category-section/book/book.html
+++ b/src/app/pages/subjects/book-viewer/category-section/book/book.html
@@ -1,6 +1,6 @@
 <template args="model">
     <img src="{model.coverUrl}" alt="book cover">
-    <div class="details">
+    <div class="details {model.detailsOpenClass}">
         <div class="get-this-title-container" skip="true"></div>
         <div class="cta">
             <a href="/details/{model.slug}" class="btn">details & resources</a>
