--- a/src/app/pages/subjects/subjects.scss
+++ b/src/app/pages/subjects/subjects.scss
@@ -156,6 +156,16 @@
             }
         }
 
+        @mixin get-this-is-visible() {
+            height: auto;
+            opacity: 1;
+            overflow: initial;
+            padding: 1.5rem;
+            transform: translate3d(0, 0, 0);
+            width: 110%;
+            z-index: 1;
+        }
+
         .details {
             background: color(neutral-lightest);
             box-shadow: 0 0.1rem 0.3rem 0.2rem rgba(94, 96, 98, 0.1);
@@ -168,6 +178,10 @@
             transform: translate3d(0, -1rem, 0);
             transition: opacity 0.2s, transform 0.2s;
             width: 0;
+
+            &.open {
+                @include get-this-is-visible;
+            }
 
             &::before {
                 border: 2rem solid;
@@ -196,13 +210,7 @@
 
         .cover:hover .details {
             @include desktop {
-                height: auto;
-                opacity: 1;
-                overflow: initial;
-                padding: 1.5rem;
-                transform: translate3d(0, 0, 0);
-                width: 110%;
-                z-index: 1;
+                @include get-this-is-visible;
             }
         }
     }
