--- a/src/app/pages/renew/renew.html
+++ b/src/app/pages/renew/renew.html
@@ -117,7 +117,7 @@
                         on our website, social media, and/or emails?
                         <span class="invalid-message">{model.validationMessage('00NU00000055sq6')}</span>
                         <div skip="true"></div>
-                        <select name="00NU00000055sq6">
+                        <select name="00NU00000055sq6" required>
                             <option value="1">Yes</option>
                             <option value="0">No</option>
                         </select>
@@ -128,7 +128,7 @@
                         pilots or research studies?
                         <span class="invalid-message">{model.validationMessage('00NU00000055sqB')}</span>
                         <div skip="true"></div>
-                        <select name="00NU00000055sqB">
+                        <select name="00NU00000055sqB" required>
                             <option value="1">Yes</option>
                             <option value="0">No</option>
                         </select>
