--- a/src/app/pages/blog/blog.html
+++ b/src/app/pages/blog/blog.html
@@ -1,15 +1,14 @@
 <template args="model">
-    <div class="article page" skip="true">
-    </div>
+    <div class="article page"></div>
     <div class="boxed">
-        <div class="pinned" skip="true"></div>
+        <div class="pinned"></div>
     </div>
     <div class="articles">
         <div class="boxed">
             <div class="search">
                 <h2>Read more great stories</h2>
             </div>
-            <div class="container" skip="true"></div>
+            <div class="container"></div>
         </div>
     </div>
     <div class="update-box">
