Hotfix: Blog article navigation

--- a/src/app/pages/blog/article/article.scss
+++ b/src/app/pages/blog/article/article.scss
@@ -43,6 +43,7 @@
     }
 
     .img {
+        background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
         flex-basis: 100%;
