--- a/src/app/pages/blog/article/formatted-as/feature.html
+++ b/src/app/pages/blog/article/formatted-as/feature.html
@@ -11,7 +11,7 @@
                 <span class="date">{model.date}</span>
             </p>
         </div>
-        <div class="body" skip="true"></div>
+        <div class="body"></div>
         <if condition="model.tags">
             <div class="tags">{model.tags}</div>
         </if>
