--- a/src/app/pages/blog/article/formatted-as/synopsis.html
+++ b/src/app/pages/blog/article/formatted-as/synopsis.html
@@ -3,7 +3,7 @@
     <div class="content">
         <h2><a href="/blog/{model.articleSlug}">{model.title}</a></h2>
         <h3 if="model.subheading">{model.subheading}</h3>
-        <div class="body" skip="true"></div>
+        <div class="body"></div>
         <div class="meta">
             <p>
                 <span class="author">{model.author}</span>
