Add Disqus comment section (only works for initial article load) Make newsletter signup below, not in line with, article blurbs Include and format article tags Handle body units for image and pull quote

--- a/src/app/components/quotes/quote/quote.html
+++ b/src/app/components/quotes/quote/quote.html
@@ -3,7 +3,7 @@
         <div class="image" style="background-image: url({model.image.image}){model.height ? `; height: ${model.height}px` : ''}">
         </div>
     </if>
-    <div class="quote {model.colorScheme ? model.colorScheme : ''}">
+    <div class="quote {model.colorScheme || ''}">
         <blockquote>
             <quote-html></quote-html>
             <div if="model.attribution" class="attribution">— {model.attribution}</div>
