--- a/src/app/pages/blog/blog.html
+++ b/src/app/pages/blog/blog.html
@@ -9,8 +9,8 @@
         </div>
         <div class="container"></div>
     </div>
-</div>
-<div class="update-box">
-    <h2>Get updates in your inbox</h2>
-    <a class="btn cta" href="http://go.pardot.com/l/218812/2016-10-04/lvk">Sign Up</a>
+    <div class="update-box">
+        <h2>Get updates in your inbox</h2>
+        <a class="btn cta" href="http://www2.openstax.org/l/218812/2016-10-04/lvk">Sign Up</a>
+    </div>
 </div>
