--- a/src/app/components/products-boxes/product-box/product-box.html
+++ b/src/app/components/products-boxes/product-box/product-box.html
@@ -1,8 +1,8 @@
 <template args="model">
-    <div class="image"></div>
+    <div class="image" style="background-image: url({model.image.image})"></div>
     <div class="caption">
-        <h3 class="title" data-html="title"></h3>
-        <p class="blurb" data-html="blurb"></p>
-        <a class="btn with-arrow" href="{model.url}">{model.linkText}</a>
+        <h3 class="title" data-html="heading"></h3>
+        <p class="blurb" data-html="content"></p>
+        <a class="btn with-arrow" href="{model.link}">{model.cta}</a>
     </div>
 </template>
