--- a/src/app/components/products-boxes/products-boxes.scss
+++ b/src/app/components/products-boxes/products-boxes.scss
@@ -21,6 +21,7 @@
 
     .blurb {
         flex-grow: 1;
+        margin: 0;
         width: 100%;
     }
 
@@ -71,17 +72,4 @@
             text-transform: uppercase;
         }
     }
-
-    .books > .image {
-        background-image: url('/images/k-12/books.jpg');
-    }
-
-    .cnx > .image {
-        background-image: url('/images/k-12/bx-cnx-2x.jpg');
-    }
-
-    .cc > .image {
-        background-image: url('/images/k-12/student.jpg');
-    }
-
 }
