Give Page: add Facebook share button
Change thank you wording and add Facebook share button

--- a/src/app/pages/give/give.scss
+++ b/src/app/pages/give/give.scss
@@ -190,4 +190,11 @@
         }
     }
 
+    .share-buttons {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        margin-top: 1rem;
+        padding-bottom: 1rem;
+    }
 }
