--- a/src/app/pages/give/give.html
+++ b/src/app/pages/give/give.html
@@ -420,52 +420,50 @@
                         <button type="submit" class="btn btn-orange">Continue</button>
                     </div>
                 </div>
-            </form>
-            <else>
-                <div class="hero">
-                    <div class = "background-overlay"></div>
-                    <div class="background-image"></div>
-                    <div class="boxed">
-                        <h1>{model.headline}</h1>
-                        <p>{model.subhead}</p>
-                        <if condition="model.amounts">
-                            <div class="amount-boxes">
-                                <form class="preform">
-                                    <div class="box-row">
-                                        <div each="amount in model.amounts" class="{`amount ${model.selectedAmount === +amount ? 'selected' : ''}`}" data-value="{amount}">${amount}</div>
-                                        <input type="number" class="{`amount-input ${model.otherAmount === null ? '' : 'selected'}`}" placeholder="Other amount" min="5" value="{model.otherAmount}"/>
-                                    </div>
-                                    <input class="btn" type="submit" value="donate!" />
-                                </form>
+            </div>
+        </form>
+    <else>
+        <div class="hero">
+            <div class = "background-overlay"></div>
+            <div class="background-image"></div>
+            <div class="boxed">
+                <h1>{model.headline}</h1>
+                <p>{model.subhead}</p>
+                <if condition="model.amounts">
+                    <div class="amount-boxes">
+                        <form class="preform">
+                            <div class="box-row">
+                                <div each="amount in model.amounts" class="{`amount ${model.selectedAmount === +amount ? 'selected' : ''}`}" data-value="{amount}">${amount}</div>
+                                <input type="number" class="{`amount-input ${model.otherAmount === null ? '' : 'selected'}`}" placeholder="Other amount" min="5" value="{model.otherAmount}"/>
                             </div>
-                            <else>
-                                <div class="text-content">
-                                    <a href="/impact" class="btn btn-gold">See our impact</a>
-                                </div>
-                            </if>
-                        </div>
+                            <input class="btn" type="submit" value="donate!" />
+                        </form>
                     </div>
-                    <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
-                    <div class="boxed">
-                        <h2>{model.otherPaymentHeading}</h2>
-                        <hr />
-                        <div class="row">
-                            <div each="pm in model.paymentMethods.slice(0,2)" class="col">
-                                <h3>{pm.heading}</h3>
-                                <div data-html="paymentMethods[{$item}].content" skip="true"></div>
-                            </div>
-                        </div>
-                        <hr />
-                        <div class="row">
-                            <div each="pm in model.paymentMethods.slice(2)" class="col">
-                                <h3>{pm.heading}</h3>
-                                <div data-html="paymentMethods[{$item}+2].content" skip="true"></div>
-                            </div>
-                        </div>
-                        <hr />
-                        <p>
-                            <a href="/contact?subject=Donations" class="btn cta">{model.giveCtaText}</a>
-                        </p>
-                    </div>
-                    </if>
-                </template>
+                </if>
+                <div class="share-buttons boxed" skip="true"></div>
+            </div>
+        </div>
+        <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
+        <div if="!model.isThanks" class="boxed">
+            <h2>{model.otherPaymentHeading}</h2>
+            <hr />
+            <div class="row">
+                <div each="pm in model.paymentMethods.slice(0,2)" class="col">
+                    <h3>{pm.heading}</h3>
+                    <div data-html="paymentMethods[{$item}].content" skip="true"></div>
+                </div>
+            </div>
+            <hr />
+            <div class="row">
+                <div each="pm in model.paymentMethods.slice(2)" class="col">
+                    <h3>{pm.heading}</h3>
+                    <div data-html="paymentMethods[{$item}+2].content" skip="true"></div>
+                </div>
+            </div>
+            <hr />
+            <p>
+                <a href="/contact?subject=Donations" class="btn cta">{model.giveCtaText}</a>
+            </p>
+        </div>
+    </if>
+</template>
