Add FAQ link (from CMS) to About Us

--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -15,6 +15,7 @@
         <div class="boxed">
             <h2>{model.introHeading}</h2>
             {model.introParagraph}
+            <p><a href="/faq">{model.faqLink}</a></p>
         </div>
     </div>
 
