Add allies logo

--- a/src/app/pages/partners/partners.html
+++ b/src/app/pages/partners/partners.html
@@ -3,6 +3,10 @@
         <div class="container">
             <h1>{model.title}</h1>
             <p>{model.classroom_text}</p>
+            <p>
+                OpenStax Partners are identified around the web with the OpenStax Ally logo.
+            </p>
+            <img class="ally-logo" src="http://staxlogos.openstax.org/OSX-ALLY-Yellow-RGB-150dpi.png" />
         </div>
     </div>
     <div class="icons">
